adding fontawesome kit

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/c1432b43b7.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Dad Jokes</title>
   </head>
   <body>
