adding emojie css to the app

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,8 @@
       src="https://kit.fontawesome.com/c1432b43b7.js"
       crossorigin="anonymous"
     ></script>
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet" />
+
     <title>Dad Jokes</title>
   </head>
   <body>
